--- a/index.html
+++ b/index.html
@@ -13,21 +13,33 @@
     <section>
       <div class ="body-blocks" id="new-activity-block">
         <h2 class="body-headings" id="">New Activity</h2>
-        <form id="form">
-          <h3>Select a category:</h3>
-          <div id="activity-buttons-row">
-            <button class="activity-buttons" id="study-button"><h4>Study</h4></button>
-            <button class="activity-buttons" id="meditate-button"><h4>Meditate</h4></button>
-            <button class="activity-buttons" id="exercise-button"><h4>Exercise</h4></button>
-          </div>
-          <h3>What would you like to accomplish during this time?</h3>
-          <input type="text" class="" id="" />
-          <!-- <label for=""></label> -->
-          <div id="time-input-row">
-            <label for=""></label>
-            <input type="text" class="" id="" />
-          </div>
-        </form>
+          <form id="form">
+            <div id="form-alignment">
+              <div>
+                <h3>Select a category:</h3>
+                <div id="activity-buttons-row">
+                  <button class="activity-buttons" id="study-button"><h4>Study</h4></button>
+                  <button class="activity-buttons" id="meditate-button"><h4>Meditate</h4></button>
+                  <button class="activity-buttons" id="exercise-button"><h4>Exercise</h4></button>
+                </div>
+              </div>
+              <div id="accomplish-input-column">
+                <label for="">What would you like to accomplish during this time?</label>
+                <input type="text" class="" id="" />
+              </div>
+              <div id="time-input-row">
+                <div class="time-input-columns">
+                  <label for="">Minutes</label>
+                  <input type="text" class="" id="" />
+                </div>
+                <div class="time-input-columns">
+                  <label for="">Seconds</label>
+                  <input type="text" class="" id="" />
+                </div>
+              </div>
+              <button id="start-activity-button">START ACTIVITY</button>
+            </div>
+          </form>
       </div>
       <div class="body-blocks" id="past-activity-block">
         <h2 class="body-headings">Past Activities</h2>
