--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
               <div>
                 <h3>Select a category:</h3>
                 <div id="activity-buttons-row">
-                  <button class="activity-buttons" id="study-button"><h4>Study</h4></button>
-                  <button class="activity-buttons" id="meditate-button"><h4>Meditate</h4></button>
-                  <button class="activity-buttons" id="exercise-button"><h4>Exercise</h4></button>
+                  <button class="activity-buttons" id="study-button"><img src="./assets/study.svg">Study</button>
+                  <button class="activity-buttons" id="meditate-button"><img src="./assets/meditate.svg">Meditate</button>
+                  <button class="activity-buttons" id="exercise-button"><img src="./assets/exercise.svg">Exercise</button>
                 </div>
               </div>
               <div id="accomplish-input-column">
