Complete color change functionality for each activity button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div id="activity-buttons-row">
                   <button class="activity-buttons" id="study-button"><img id="study-icon" src="./assets/study.svg" alt="light bulb">Study</button>
                   <button class="activity-buttons" id="meditate-button"><img id="meditate-icon" src="./assets/meditate.svg" alt="lotus flower">Meditate</button>
-                  <button class="activity-buttons" id="exercise-button"><img id="ecercise-icon" src="./assets/exercise.svg" alt="running shoe">Exercise</button>
+                  <button class="activity-buttons" id="exercise-button"><img id="exercise-icon" src="./assets/exercise.svg" alt="running shoe">Exercise</button>
                 </div>
               </div>
               <div id="accomplish-input-column">
