Banish the letter 'e' & 'E'

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>INTENTION TIMER</h1>
     </header>
     <main>
-      <section class="body-blocks new-activity-block"> 
+      <section class="body-blocks new-activity-block">
         <h2 class="body-headings" id="">New Activity</h2>
           <form id="form">
             <div id="form-alignment">
@@ -29,12 +29,12 @@
               </div>
               <div id="time-input-row">
                 <div class="time-input-columns">
-                  <label for="">Minutes</label>
-                  <input type="text" class="" id="" />
+                  <label for="minutes">Minutes</label>
+                  <input type="number" class="number-input" id="minutes" />
                 </div>
                 <div class="time-input-columns">
-                  <label for="">Seconds</label>
-                  <input type="text" class="" id="" />
+                  <label for="seconds">Seconds</label>
+                  <input type="number" class="number-input" id="seconds" />
                 </div>
               </div>
               <button id="start-activity-button">START ACTIVITY</button>
