--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <section class="body-blocks new-activity-block">
         <h2 class="body-headings" id="">New Activity</h2>
           <form id="form">
-            <div id="form-alignment">
+            <div class="form-alignment" id="form-alignment">
               <div>
                 <h3>Select a category:</h3>
                 <div id="activity-buttons-row">
@@ -25,22 +25,27 @@
               </div>
               <div id="accomplish-input-column">
                 <label for="">What would you like to accomplish during this time?</label>
-                <input type="text-box" class="" id="accomplish-input" />
+                <input type="text-box" class="form-input" id="accomplish-input" />
                 <div class="warning-div hidden" id="accomplish-input-warning"><img class="warning-icon" src="./assets/warning.svg" alt="Warning icon">A description is required</div>
               </div>
               <div id="time-input-row">
                 <div class="time-input-columns">
                   <label for="minutes">Minutes</label>
-                  <input type="number" class="number-input" id="minutes" />
+                  <input type="number" class="form-input number-input" id="minutes" />
                   <div class="small-warning-div hidden" id="minutes-input-warning"><img class="small-warning-icon" src="./assets/warning.svg" alt="Warning icon">An input is required</div>
                 </div>
                 <div class="time-input-columns">
                   <label for="seconds">Seconds</label>
-                  <input type="number" class="number-input" id="seconds" />
+                  <input type="number" class="form-input number-input" id="seconds" />
                   <div class="small-warning-div hidden" id="seconds-input-warning"><img class="small-warning-icon" src="./assets/warning.svg" alt="Warning icon">An input is required</div>
                 </div>
               </div>
               <button id="start-activity-button">START ACTIVITY</button>
+            </div>
+            <div class="activity-timer hidden" id="activity-timer">
+              <p id="accomplish-output"></p>
+              <p class="time-left" id="time-left"></p>
+              <button id="start-button">START</button>
             </div>
           </form>
       </section>
@@ -50,7 +55,7 @@
         <p class="no-activities">Complete the form to the left to get started!</p>
       </section>
     </main>
-    <!-- <script src="./activity.js"></script> -->
+    <script src="./activity.js"></script>
     <script src="./main.js"></script>
   </body>
 </html>
