Limit the amount of seconds to 60

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
               <div id="time-input-row">
                 <div class="time-input-columns">
                   <label for="minutes">Minutes</label>
-                  <input type="number" class="form-input number-input" id="minutes" />
+                  <input type="number" class="form-input" id="minutes" />
                   <div class="small-warning-div hidden" id="minutes-input-warning"><img class="small-warning-icon" src="./assets/warning.svg" alt="Warning icon">An input is required</div>
                 </div>
                 <div class="time-input-columns">
                   <label for="seconds">Seconds</label>
-                  <input type="number" class="form-input number-input" id="seconds" />
+                  <input type="number" min="0" max="59" class="form-input" id="seconds" />
                   <div class="small-warning-div hidden" id="seconds-input-warning"><img class="small-warning-icon" src="./assets/warning.svg" alt="Warning icon">An input is required</div>
                 </div>
               </div>
-              <button id="start-activity-button">START ACTIVITY</button>
+              <button value ="submit" type="submit" id="start-activity-button">START ACTIVITY</button>
             </div>
             <div class="activity-timer hidden" id="activity-timer">
               <p id="accomplish-output"></p>
