--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
               <p id="accomplish-output"></p>
               <p class="time-left" id="time-left"></p>
               <button id="start-button">START</button>
+              <button class="hidden log-activity" id="log-activity">LOG ACTIVITY</button>
             </div>
           </form>
       </section>
