Replace timer with a congratulatory message

--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
               <p id="accomplish-output"></p>
               <p class="time-left" id="time-left"></p>
               <button id="start-button">START</button>
-              <button class="hidden log-activity" id="log-activity">LOG ACTIVITY</button>
-            </form>
-          </div>
+            </div>
+            <div class="congratulatory-message hidden">
+              <p>🎉YOU FUCKING DID IT!🎉</p>
+              <button class="log-activity" id="log-activity">LOG ACTIVITY</button>
+            </div>
+          </form>
       </section>
       <section class="body-blocks past-activity-block">
         <h2 class="body-headings">Past Activities</h2>
