Build activity card skeleton

--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
       </section>
       <section class="body-blocks past-activity-block">
         <h2 class="body-headings">Past Activities</h2>
-        <p class="no-activities" id="no-activity-paragraph">You haven't logged any activities yet.</p>
-        <p class="no-activities">Complete the form to the left to get started!</p>
+        <div class="no-activity-card" id="no-activity-card">
+          <p>You haven't logged any activities yet.</p>
+          <p>Complete the form to the left to get started!</p>
+        </div>
+        <div class="past-activity-cards hidden"></div>
       </section>
     </main>
     <script src="./activity.js"></script>
