--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
       <section class="body-blocks new-activity-block">
-        <h2 class="body-headings" id="">New Activity</h2>
+        <h2 class="body-headings" id="form-heading">New Activity</h2>
           <form id="form">
             <div class="form-alignment" id="form-alignment">
               <div>
@@ -25,8 +25,8 @@
                 <p class="warning-p hidden" id="button-selection-warning"><img class="warning-icon" src="./assets/warning.svg" alt="Warning icon">A selection is required</p>
               </div>
               <div id="accomplish-input-column">
-                <label for="">What would you like to accomplish during this time?</label>
-                <input type="text-box" class="form-input" id="accomplish-input" />
+                <label for="accomplish-input">What would you like to accomplish during this time?</label>
+                <input type="text-box" maxlength="50" class="form-input" id="accomplish-input" />
                 <p class="warning-p hidden" id="accomplish-input-warning"><img class="warning-icon" src="./assets/warning.svg" alt="Warning icon">A description is required</p>
               </div>
               <div id="time-input-row">
