Clean up spacing and puncuation

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!-- <!DOCTYPE html> -->
 <html>
   <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="./styles.css">
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <title>Intention Timer</title>
   </head>
@@ -26,7 +25,7 @@
               </div>
               <div id="accomplish-input-column">
                 <label for="accomplish-input">What would you like to accomplish during this time?</label>
-                <input type="text-box" maxlength="50" class="form-input" id="accomplish-input" />
+                <input type="text-box" maxlength="30" class="form-input" id="accomplish-input" />
                 <p class="warning-p hidden" id="accomplish-input-warning"><img class="warning-icon" src="./assets/warning.svg" alt="Warning icon">A description is required</p>
               </div>
               <div id="time-input-row">
